# client

./: .gitignore  CMakeLists.txt  CMakePresets.json  client_default.cfg
.devcontainer/: Dockerfile  devcontainer.json
CMakeModules/: FindNeL.cmake  HunterConfig.cmake  OSXToolChain.cmake  nel.cmake
client/: CMakeLists.txt  actions.h  animated_scene_object.h  animation.cpp  animation_fx.h  animation_fx_id_array.cpp  animation_fx_misc.cpp  animation_fx_sheet.cpp  animation_misc.cpp  animation_set.cpp  animation_state.cpp  animation_state.h  animation_type.h  app_bundle_utils.cpp  attack.h  attack_info.h  behaviour_context.h  bg_downloader_access.cpp  bg_downloader_access.h  camera.cpp  camera_recorder.cpp  candidate.h  character_cl.cpp  decal.h  (+98 more)
client/client_sheets/: CMakeLists.txt  animation_fx_set_sheet.h  animation_set_list_sheet.cpp  attack_id_sheet.h  attack_list_sheet.h  attack_sheet.h  automaton_list_sheet.cpp  body_to_bone_sheet.cpp  body_to_bone_sheet.h  building_sheet.h  emot_list_sheet.h  entity_sheet.cpp  entity_sheet.h  faction_sheet.cpp  faction_sheet.h  flora_sheet.cpp  flora_sheet.h  forage_source_sheet.cpp  forage_source_sheet.h  fx_sheet.h  ground_fx_sheet.h  item_sheet.h  light_cycle_sheet.cpp  mission_icon_sheet.h  outpost_building_sheet.cpp  outpost_building_sheet.h  outpost_sheet.h  outpost_squad_sheet.cpp  pact_sheet.cpp  pact_sheet.h  player_sheet.h  race_stats_sheet.cpp  skills_tree_sheet.cpp  skills_tree_sheet.h  sky_object_sheet.h  sky_sheet.h  success_table_sheet.cpp  success_table_sheet.h  text_emot_list_sheet.cpp  unblock_titles_sheet.h  (+4 more)
(+772 files in other folders)
