FILE(GLOB SRC *.cpp)
FILE(GLOB PRIV_H *.h)

SOURCE_GROUP(headers FILES ${PRIV_H} ${PUB_H})

NL_TARGET_LIB(clientsheets ${SRC} ${PRIV_H})

TARGET_LINK_LIBRARIES(clientsheets gameshare nelmisc)
NL_DEFAULT_PROPS(clientsheets "Ryzom, Library: Client Sheets")
NL_ADD_LIB_SUFFIX(clientsheets)

IF(WITH_PCH)
  target_precompile_headers(clientsheets PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/stdpch.h)
ENDIF()

IF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)
  INSTALL(TARGETS clientsheets LIBRARY DESTINATION ${RYZOM_LIB_PREFIX} ARCHIVE DESTINATION ${RYZOM_LIB_PREFIX} COMPONENT libraries)
ENDIF()
